utilize bounding box to locate view reference

--- a/revit-plugin-1.csproj
+++ b/revit-plugin-1.csproj
@@ -57,6 +57,7 @@
     <Compile Include="CopyNew.cs" />
     <Compile Include="CopyTo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reference.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="revit-plugin-1.addin" />
